# tradehub

./: .gitignore  README.md  main.py  manage.py  pyproject.toml
cart/: views.py
orders/: models.py  views.py
shop/: admin.py  models.py  views.py
shop/product/: detail.html  list.html
shop/static/: pdf.css
shop/static/css/: base.css
shop/templates/shop/: base.html
shop/templates/shop/product/: list.html
tradehub/: asgi.py  models.py  settings.py  urls.py  wsgi.py
